[gd_scene load_steps=13 format=3 uid="uid://dgco5km7x87pi"]

[ext_resource type="Script" path="res://scenes/level_editor/assets/level_editor_menu/time_line_settings/time_line_settings.gd" id="1_dpl24"]
[ext_resource type="Script" path="res://scenes/level_editor/assets/level_editor_menu/time_line_settings/snap_beats.gd" id="1_x2jft"]
[ext_resource type="Texture2D" uid="uid://7r81hmuyh6iv" path="res://assets/icons/refresh.png" id="3_2yxnh"]
[ext_resource type="Texture2D" uid="uid://uomvoa4ev5vx" path="res://assets/icons/select.png" id="3_qktwh"]
[ext_resource type="Texture2D" uid="uid://vygr63p5lj2i" path="res://assets/icons/delete.png" id="4_wev2s"]
[ext_resource type="Texture2D" uid="uid://bcvhgm3okknvp" path="res://assets/icons/item.png" id="5_hkrhe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_di6fo"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.286275, 0.294118, 0.352941, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0.0745098, 0.0745098, 0.0745098, 0.372549)
shadow_size = 3

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i2xko"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o0lvh"]
content_margin_left = 1.0
content_margin_top = 1.0
content_margin_right = 1.0
content_margin_bottom = 1.0
bg_color = Color(0.568973, 0.568973, 0.568973, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_es18d"]
bg_color = Color(0.683077, 0.683077, 0.683077, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1pags"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.172549, 0.176471, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bot8o"]

[node name="TimeLineSettings" type="PanelContainer"]
custom_minimum_size = Vector2(400, 0)
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_di6fo")
script = ExtResource("1_dpl24")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SnapBeats" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("1_x2jft")

[node name="Label" type="Label" parent="HBoxContainer/SnapBeats"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Snap Beats: "

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/SnapBeats"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="HBoxContainer/SnapBeats/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
max_value = 3.0
value = 3.0
rounded = true
tick_count = 4

[node name="Button" type="Button" parent="HBoxContainer/SnapBeats/HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_i2xko")
theme_override_styles/hover = SubResource("StyleBoxFlat_o0lvh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_es18d")
icon = ExtResource("3_2yxnh")
icon_alignment = 1
expand_icon = true

[node name="Tools" type="ItemList" parent="HBoxContainer"]
custom_minimum_size = Vector2(265, 45)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
size_flags_stretch_ratio = 1.5
theme_override_styles/panel = SubResource("StyleBoxFlat_1pags")
theme_override_styles/focus = SubResource("StyleBoxEmpty_bot8o")
allow_search = false
item_count = 3
max_columns = 4
icon_scale = 0.385
item_0/text = "Select"
item_0/icon = ExtResource("3_qktwh")
item_1/text = "Delete"
item_1/icon = ExtResource("4_wev2s")
item_2/text = "Item"
item_2/icon = ExtResource("5_hkrhe")

[connection signal="changed_snap_beats" from="HBoxContainer/SnapBeats" to="." method="_on_changed_snap_beats"]
[connection signal="value_changed" from="HBoxContainer/SnapBeats/HBoxContainer/HSlider" to="HBoxContainer/SnapBeats" method="_on_slider_value_change"]
[connection signal="pressed" from="HBoxContainer/SnapBeats/HBoxContainer/Button" to="HBoxContainer/SnapBeats" method="_on_reset_button_pressed"]
[connection signal="item_selected" from="HBoxContainer/Tools" to="." method="_on_tools_item_selected"]
